<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/backArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/back_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/enter_your_details"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/email"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="@dimen/_14sdp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded">

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords|textPersonName"
                            android:maxLines="1"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded">

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords|textPersonName"
                            android:maxLines="1"
                            android:textSize="@dimen/_14sdp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.dot2dotz.provider.Utilities.MyTextView
                        android:id="@+id/countryNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="+91"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="normal" />

                    <!-- <com.rilixtech.CountryCodePicker
                         android:id="@+id/ccp"
                         android:layout_width="100dp"
                         android:layout_height="70dp"
                         android:layout_gravity="center"
                         android:gravity="center"
                         app:ccp_defaultNameCode="US"/>-->

                    <com.dot2dotz.provider.Utilities.MyEditText
                        android:id="@+id/mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1" />

                </LinearLayout>


                <!--Car Details-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/car_Details"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <Spinner
                    android:id="@+id/service_type"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:ignore="RtlHardcoded">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="@dimen/_14sdp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/choose_type"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/service_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/vehicle_doc_details"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_14sdp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

                <ImageView
                    android:id="@+id/upload_img"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/referral_code"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_35sdp">

                    <EditText
                        android:id="@+id/referral_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:imeOptions="actionNext"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textAlignment="viewStart" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/nextIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_right"
        android:visibility="visible" />


</android.support.design.widget.CoordinatorLayout>