<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <com.dot2dotz.provider.Utilities.MyBoldTextView
                android:id="@+id/trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/trip"
                android:textColor="@color/blue_dark" />



        </RelativeLayout>

        <com.dot2dotz.provider.Utilities.MyBoldTextView
            android:id="@+id/delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/delivery_address"
            android:textColor="@color/black_text_color" />

        <com.dot2dotz.provider.Utilities.MyTextView
            android:id="@+id/destination_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            />


        <com.dot2dotz.provider.Utilities.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/comments"
            android:textColor="@color/black_text_color" />

        <com.dot2dotz.provider.Utilities.MyTextView
            android:layout_marginBottom="@dimen/_8sdp"
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/comments" />

    </LinearLayout>

</android.support.v7.widget.CardView>

