<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_5sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow_multiple"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_7sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/back_icon"
            android:tint="@color/text_color_white" />

        <com.dot2dotz.provider.Utilities.MyBoldTextView
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/track_oredr"
            android:textColor="@color/text_color_white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:background="#eee"
        android:id="@+id/source_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnrTitle"
        android:orientation="vertical"
        android:paddingEnd="@dimen/_14sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_14sdp">

        <com.dot2dotz.provider.Utilities.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="@color/black_text_color" />

        <com.dot2dotz.provider.Utilities.MyTextView
            android:layout_marginTop="@dimen/_4sdp"
            android:id="@+id/src_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:ellipsize="end"
          android:paddingEnd="@dimen/_5sdp"
            android:text="@string/sample" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/flow_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/source_layout"
        />
</RelativeLayout>
